# mini-vatsim-fdps

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  docker-compose.yml  vcpkg.json
core/: CMakeLists.txt  FlightStateConsumer.cpp  FlightStateConsumer.h  main.cpp
ingest/: APublisher.cpp  APublisher.h  CMakeLists.txt  VATSIMFlightPlan.h  VATSIMFlightState.h  VATSIMMetadata.h  VATSIMPrefile.h  VATSIMResource.cpp  VATSIMResource.h  VATSIMResponse.h  ZeroMQPublisher.cpp  ZeroMQPublisher.h  main.cpp
shared/: CMakeLists.txt  FlightPlan.h  FlightState.h  RabbitMQConnection.cpp  RabbitMQConnection.h
